# Image_processor

./: CMakeLists.txt  bmp_image.cpp  bmp_image.h  cmd_parser.cpp  cmd_parser.h  controller.cpp  controller.h  filter_factory.cpp  filter_factory.h  filters.cpp  filters.h  image.cpp  image.h  image_processor.cpp  utilities.h
